--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5",
