--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mobx": "^6.10.2",
+    "mobx-persist-store": "^1.1.3",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
